feat(hw-1): make pop and push suspend function